# Document_review

./: .env.example  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/api/: routes.py
app/core/: config.py
app/models/: schemas.py
app/rag/: chunking.py  document_loader.py  embeddings.py  llm.py  pipeline.py  vector_store.py
app/services/: document_service.py
app/utils/: file_utils.py
docs/: API.md  ARCHITECTURE.md
frontend/: streamlit_app.py
sample_docs/: demo.md
scripts/: push_to_github.ps1  run_dev.ps1  run_frontend.ps1
tests/: test_file_utils.py  test_pipeline.py
