[project]
name = "document-qa-rag"
version = "0.1.0"
description = "End-to-end document Q&A RAG backend with FastAPI, LangChain, Groq, and Gemma."
requires-python = ">=3.11"
readme = "README.md"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
